2014-12-31  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c: Validate MHDR chunk length.

	* coders/png.c: Use ReadBlob() once instead of ReadBlobByte()
	in a loop.

	* coders/png.c: Avoid reading beyond the end of a tEXt keyword.

2014-12-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xpm.c (ReadXPMImage): Detect short XPM rows and report
	error to user rather than overrunning a buffer.

	* coders/pcx.c (ReadPCXImage): Validate that header bytes per line
	is sufficient to contain the indicated data.

	* coders/pdb.c (ReadPDBImage): Fix indexes array overrun for 2 and
	4-bit PDB image files.

	* coders/xpm.c (ReadXPMImage): Avoid strncpy() of overlapping
	memory.  Fix memory leaks in error paths.

	* coders/viff.c (ReadVIFFImage): Validate index before using it to
	access colormap.

	* coders/{cineon.c, dpx.c} (StringToAttribute): Can't use
	strlcpy() to copy string which might not be NULL-terminated since
	strlcpy() continues searching for end of string after size bytes
	have been copied.

	* coders/meta.c (convertHTMLcodes): Avoid strcpy() of overlapping
	memory.

2014-12-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/process.rst: Update description of development process to be
	more aligned with the process actually used.

	* coders/wpg.c (ReadWPGImage): Avoid use of NULL pointer returned
	from FlipImage(), FlopImage(), and RotateImage().

	* coders/rle.c (ReadRLEImage): URT RLE reader is now more robust
	with errant files.

2014-12-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* libtool: Update bundled libtool to version 2.4.4.

	* magick/constitute.c (WriteImage): Remove bogus use of
	GetBlobStatus() as a catch-all for write errors.  Coders should be
	detecting write errors all by themselves.

2014-12-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated with more improvements since previous release.

	* coders/palm.c (WritePALMImage): Log header details.
